Update server configuration with OpenSSL legacy provider
